<resources>
    <string name="app_name">Tridy_Android</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tridy_slogan">매일 다른 나만의,\n매일 새로운 여행지</string>
    <string name="kakao_app_key">ddb9cc8d4df4355e66ea553d799524ea</string>
    <string name="firebase_app_key">560781701178-m2sftupldbl5psjach05pv4aee9btpvq.apps.googleusercontent.com</string>
    <string name="policy_look"><u>보기</u></string>
    <string name="double_check_nickname"><u>중복확인</u></string>
    <string name="signup_complete">가입을 완료했어요.\n당신의 여행 성향을 알려주세요!</string>
    <string name="signup_content">여행 성향 테스트를 통해 트리디가 당신에게\n맞춤 여행 정보를 드릴 수 있어요.</string>
    <string name="signup_test_later"><u>다음에 할래요.</u></string>
    <string name="location_tridy_recommend_home">트리디가 추천하는\n오늘의 여행지</string>
    <string name="retry_recommendation_home">다시 추천받기</string>
    <string name="around_recommendation_home">이런 곳도 함께 둘러보세요</string>
</resources>